fixed gif visibility issue

--- a/css/style.css
+++ b/css/style.css
@@ -12,15 +12,11 @@ body{
 }
 
 #display{
-
   width: 30%;
   margin-left: 35%;
   padding-top: 1px;
 }
-a{
-  text-decoration: none;
-  color: gold;
-}
+
 #whoStarts{
   /* border : 10px solid purple; */
   background-image: url(../images/div-background.jpg);
@@ -53,34 +49,15 @@ a{
   border-style:  inset;
 
 }
-.pacman{
-  /* background: black; */
-  border:2px dotted gold;
-  background-image: url(../images/black-background.jpg);
-  color: gold;
-}
+
 
 #roundLabel{
   margin: 0;
   padding: 5px;
 }
-#blueWinsText,#redWinsText,#computerWinsText{
-    content-visibility: hidden;
-    z-index: 6;
-}
-#redGif,#blueGif{
-  content-visibility: hidden;
-  z-index: 6;
-}
-.invisible{
-  visibility: hidden;
-}
-.scores{
-  vertical-align:
-  margin: 5px;
-  text-align: center;
-  z-index: 1;
-}
+
+
+
 #round{
   border-radius: 10px;
   background-color: purple;
@@ -93,6 +70,18 @@ a{
   color:rgb(106, 21, 21);
   border-style:  inset;
 }
+
+#roundCount{
+  background-color: purple;
+  background-image: url(../images/div-background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+  width: 30%;
+  margin-left: 35%;
+  padding: 5px;
+}
+
 #playAgain{
 background-color: purple;
 background-image: url(../images/div-background.jpg);
@@ -119,6 +108,12 @@ margin-bottom: 5px;
   margin-top: 10px;
 }
 
+.scores{
+  vertical-align:
+  margin: 5px;
+  text-align: center;
+  z-index: 1;
+}
 
 #redScoreBox{
   /* background-color: rgba(200, 0, 0,1); */
@@ -132,7 +127,7 @@ margin-bottom: 5px;
   margin-bottom: 10px;
   color:rgb(106, 21, 21);
   border-style:  inset;
-  z-index: 1;
+
 }
 
 #computerScoreBox{
@@ -140,7 +135,7 @@ margin-bottom: 5px;
   background-image: url(../images/div-background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  visibility: collapse;
+  content-visibility: hidden;
   border-radius: 10px;
   width: 15%;
   position: absolute;
@@ -148,16 +143,31 @@ margin-bottom: 5px;
   color:rgb(106, 21, 21);
   border-style:  inset;
 }
-#roundCount{
-  background-color: purple;
+
+#blueScoreBox{
+  background-color: rgb(0,0,200,1);
   background-image: url(../images/div-background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  display:inline-block;
   border-radius: 10px;
-  width: 30%;
-  margin-left: 35%;
-  padding: 5px;
+  position: absolute;
+  width: 15%;
+  margin-left: 40vw;
+  color:rgb(106, 21, 21);
+  border-style:  inset;
+
 }
+
+#blueWinsText,#redWinsText,#computerWinsText{
+    content-visibility: hidden;
+    z-index: 6;
+}
+#redGif,#blueGif{
+  content-visibility: hidden;
+  z-index: 6;
+}
+
 input{
   background-image: url(../images/div-background.jpg);
   background-repeat: no-repeat;
@@ -180,20 +190,7 @@ input{
   font-size: 20pt;
   margin: 5px;
 }
-#blueScoreBox{
-  background-color: rgb(0,0,200,1);
-  background-image: url(../images/div-background.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  display:inline-block;
-  border-radius: 10px;
-  position: absolute;
-  width: 15%;
-  margin-left: 40vw;
-  color:rgb(106, 21, 21);
-  border-style:  inset;
 
-}
 
 #gameboard{
   border: 5px solid rgb(106, 21, 21);
@@ -205,6 +202,15 @@ input{
   top: 40%;
 }
 
+.token{
+  position: relative;
+  left: 40%;
+  top: 4%;
+}
+
+.invisible{
+  visibility: hidden;
+}
 
 .grid {
   display: inline-block;
@@ -220,8 +226,9 @@ input{
 }
 
 
-.token{
-  position: relative;
-  left: 40%;
-  top: 4%;
+
+
+a{
+  text-decoration: none;
+  color: gold;
 }
